--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="carousel-item active" data-bs-interval="2000">
             <div class="container">
               <div class="row p-5 ">
-                <div class="col col-lg-8">
+                <div class="col-12 col-lg-8">
                   <div class="d-flex algin-items-center mt-5 pt-5 pb-5">
                     <div>
                       <h1>COOL DUDE HEADPHONE</h1>
@@ -83,7 +83,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col col-lg-4">
+                <div class="col-12 col-lg-4">
                   <img src="images/banner-images/headphone.png" class="d-block w-100 pt-5 pb-5" alt="">
                 </div>
               </div>
@@ -93,7 +93,7 @@
             <div>
               <div class="container">
                 <div class="row p-5 ">
-                  <div class="col col-lg-8">
+                  <div class="col-12 col-lg-8">
                     <div class="d-flex algin-items-center mt-5 pt-5 pb-5">
                       <div>
                         <h1>X-Box For your living room</h1>
@@ -106,7 +106,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col col-lg-4">
+                  <div class="col-12 col-lg-4">
                     <img src="images/banner-images/xbox.png" class="d-block w-100 pt-5 pb-5" alt="">
                   </div>
                 </div>
@@ -117,7 +117,7 @@
             <div>
               <div class="container">
                 <div class="row p-5 ">
-                  <div class="col col-lg-8">
+                  <div class="col-12 col-lg-8">
                     <div class="d-flex algin-items-center mt-5 pt-5 pb-5">
                       <div>
                         <h1>MEGA LCD TV For Sports</h1>
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col col-lg-4">
+                  <div class="col-12 col-lg-4">
                     <img src="images/banner-images/tv.png" class="d-block w-100 pt-5 pb-5" alt="">
                   </div>
                 </div>
